--- a/WebApplication1/Areas/webmaster/Views/comunidades/listado.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunidades/listado.cshtml
@@ -66,7 +66,7 @@
                                 <thead>
                                     <tr>
                                         <th class="f-b">Nombre</th>
-                                        <th class="f-b">Administrador</th>
+                                        @*<th class="f-b">Administrador</th>*@
                                         <th class="f-b">Estado</th>
                                         <th class="f-b">Paquete</th>
                                         <th class="text-center f-b">Opciones</th>
@@ -77,7 +77,7 @@
                                     {
                                         <tr>
                                             <td>@item.first_name</td>
-                                            <td class="text-center">@item.admin_email</td>
+                                            @*<td class="text-center">@item.admin_email</td>*@
                                             <td class="text-center">
                                                 @if (item.is_active == true)
                                                 {
