--- a/WebApplication1/Areas/webmaster/Views/suplidores/agregar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/suplidores/agregar.cshtml
@@ -74,7 +74,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Compañía suplidor</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="company" required
+                                    <input maxlength="30" class="form-control soloTexto" type="text" value="" name="company" required
                                            data-toggle="tooltip" title="Nombre de la compañía del suplidor"
                                            placeholder="Compañía suplidor" id="example-email-input">
                                     <small class="form-text text-muted">Nombre de la compañía del suplidor</small>
@@ -84,7 +84,7 @@
                             <div class="form-group row">
                                 <label for="example-name1-input" class="col-sm-3 col-form-label">Nombre de contacto</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="contact_name" required
+                                    <input maxlength="30" class="form-control soloTexto" type="text" value="" name="contact_name" required
                                            data-toggle="tooltip" title="Nombre de contacto del suplidor"
                                            placeholder="Nombre de contacto" id="example-name1-input">
                                     <small class="form-text text-muted">Nombre de contacto del suplidor</small>
@@ -94,7 +94,7 @@
                             <div class="form-group row">
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Tipo de servicio</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="type_service" required
+                                    <input maxlength="20" class="form-control soloTexto" type="text" value="" name="type_service" required
                                            data-toggle="tooltip" title="Servicio que ofrece"
                                            placeholder="Tipo de servicio" id="example-lastname1-input">
                                     <small class="form-text text-muted">Servicio que ofrece</small>
@@ -119,7 +119,7 @@
                             <div class="form-group row">
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Dirección</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="address" required
+                                    <input maxlength="90" class="form-control" type="text" value="" name="address" required
                                            data-toggle="tooltip" title="Dirección del suplidor"
                                            placeholder="Dirección" id="example-lastname1-input">
                                     <small class="form-text text-muted">Dirección del suplidor</small>
@@ -129,7 +129,7 @@
                             <div class="form-group row">
                                 <label for="example-tel1-input" class="col-sm-3 col-form-label">Teléfono</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="tel" value="" name="phone" required
+                                    <input maxlength="15" class="form-control soloNumero" type="tel" value="" name="phone" required
                                            data-toggle="tooltip" title="Teléfono del suplidor"
                                            placeholder="# Teléfono" id="example-tel1-input">
                                     <small class="form-text text-muted">Teléfono del suplidor</small>
@@ -139,7 +139,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Correo electrónico</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="email" value="" name="email" required
+                                    <input maxlength="40" class="form-control" type="email" value="" name="email" required
                                            data-toggle="tooltip" title="Correo electrónico del suplidor"
                                            placeholder="Correo electrónico" id="example-email-input">
                                     <small class="form-text text-muted">Correo electrónico del suplidor</small>
@@ -159,7 +159,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Página web</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="web_page" required
+                                    <input maxlength="50" class="form-control" type="text" value="" name="web_page" required
                                            data-toggle="tooltip" title="Por ejemplo: wwww.suplidores.com"
                                            placeholder="Url de página web" id="example-email-input">
                                     <small class="form-text text-muted">Por ejemplo: wwww.suplidores.com</small>
