--- a/WebApplication1/Areas/webmaster/Views/webmaster/agregar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/webmaster/agregar.cshtml
@@ -91,9 +91,9 @@
                         <div class="form-group row">
                             <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
                             <div class="col-sm-9">
-                                <input class="form-control" type="text" value="" name="first_name1" required
+                                <input maxlength="30" class="form-control soloTexto" type="text" value="" name="first_name1"
                                        data-toggle="tooltip" title="Nombre del webmaster"
-                                       placeholder="Nombre" id="example-email-input">
+                                       placeholder="Nombre" id="example-email-input" required>
                                 <small class="form-text text-muted">Nombre del webmaster</small>
                             </div>
                         </div>
@@ -101,9 +101,9 @@
                         <div class="form-group row">
                             <label for="example-email-input" class="col-sm-3 col-form-label">Apellido paterno</label>
                             <div class="col-sm-9">
-                                <input class="form-control" type="text" value="" name="last_name1" required
+                                <input maxlength="15" class="form-control soloTexto" type="text" value="" name="last_name1"
                                        data-toggle="tooltip" title="Apellido paterno del webmaster"
-                                       placeholder="Apellido paterno" id="example-email-input">
+                                       placeholder="Apellido paterno" id="example-email-input" required>
                                 <small class="form-text text-muted">Apellido paterno del webmaster</small>
                             </div>
                         </div>
@@ -111,9 +111,9 @@
                         <div class="form-group row">
                             <label for="example-email-input" class="col-sm-3 col-form-label">Apellido materno</label>
                             <div class="col-sm-9">
-                                <input class="form-control" type="text" value="" name="mother_last_name1"
+                                <input maxlength="15" class="form-control soloTexto" type="text" value="" name="mother_last_name1"
                                        data-toggle="tooltip" title="Apellido materno del webmaster"
-                                       placeholder="Apellido materno" id="example-email-input">
+                                       placeholder="Apellido materno" id="example-email-input" required>
                                 <small class="form-text text-muted">Apellido materno del webmaster</small>
                             </div>
                         </div>
@@ -121,9 +121,9 @@
                         <div class="form-group row">
                             <label for="example-lastname1-input" class="col-sm-3 col-form-label">Email</label>
                             <div class="col-sm-9">
-                                <input class="form-control" type="email" value="" name="email"
+                                <input maxlength="40" class="form-control" type="email" value="" name="email"
                                        data-toggle="tooltip" title="Email del webmaster"
-                                       placeholder="Email" id="example-email-input">
+                                       placeholder="Email" id="example-email-input" required>
                                 <small class="form-text text-muted">Email del webmaster</small>
                             </div>
                         </div>
@@ -131,13 +131,13 @@
                         <div class="form-group row">
                             <label for="example-password-input" class="col-sm-3 col-form-label">Contraseña</label>
                             <div class="col-sm-9">
-                                <input class="form-control" type="password" value="" name="password"
+                                <input maxlength="16" class="form-control" type="password" value="" name="password"
                                        data-toggle="tooltip" title="Contraseña utilizada para ingresar al sistema"
-                                       placeholder="Contraseña" id="example-password-input">
+                                       placeholder="Contraseña" id="example-password-input" required>
                                 <small class="form-text text-muted">Contraseña utilizada para ingresar al sistema</small>
                             </div>
                         </div>
-                        <div class="form-divider"></div>
+                        @*<div class="form-divider"></div>
                         <div class="form-group row">
                             <label class="col-sm-3 col-form-label">Comunidad</label>
                             <div class="col-sm-9">
@@ -150,8 +150,8 @@
                                 </select>
                                 <small class="form-text text-muted">Lista de comunidades</small>
                             </div>
-                        </div>
-                        <div class="form-divider"></div>
+                        </div>*@
+                        @*<div class="form-divider"></div>
                         <div class="form-group row" style="display: none;">
                             <label class="col-sm-3 col-form-label">Comunidad</label>
                             <div class="col-sm-9">
@@ -164,7 +164,7 @@
                                 </select>
                                 <small class="form-text text-muted">Lista de comunidades</small>
                             </div>
-                        </div>
+                        </div>*@
 
 
                      
