--- a/WebApplication1/Areas/webmaster/Views/administradores/editar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/administradores/editar.cshtml
@@ -101,7 +101,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="@Model.editAdmin.first_name1"
+                                    <input maxlength="30" class="form-control soloTexto" type="text" value="@Model.editAdmin.first_name1"
                                            placeholder="Nombre" id="example-email-input" name="first_name1" required
                                            data-toggle="tooltip" />
                                     @*<small class="form-text text-muted">Nombre del Administrador</small>*@
@@ -111,7 +111,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Apellido paterno</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="@Model.editAdmin.last_name1"
+                                    <input maxlength="15" class="form-control soloTexto" type="text" value="@Model.editAdmin.last_name1"
                                            placeholder="Apellido paterno" id="example-email-input" name="last_name1" required
                                            data-toggle="tooltip" />
                                     @*<small class="form-text text-muted">Apellido Paterno del Administrador</small>*@
@@ -121,7 +121,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Apellido materno</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="@Model.editAdmin.mother_last_name1"
+                                    <input maxlength="15" required class="form-control soloTexto" type="text" value="@Model.editAdmin.mother_last_name1"
                                            placeholder="Apellido materno" id="example-email-input" name="mother_last_name1"
                                            data-toggle="tooltip" />
                                     @* <small class="form-text text-muted">Apellido Materno del Administrador</small>*@
@@ -131,7 +131,7 @@
                             <div class="form-group row">
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Email</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="email" value="@Model.editAdmin.email"
+                                    <input maxlength="40" required class="form-control" type="email" value="@Model.editAdmin.email"
                                            placeholder="Email" id="example-email-input" name="email"
                                            data-toggle="tooltip" />
                                     @* <small class="form-text text-muted">Email del administrador</small>*@
@@ -141,7 +141,7 @@
                             <div class="form-group row">
                                 <label for="example-password-input" class="col-sm-3 col-form-label">Contraseña</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="password" value="@Model.editPassword"
+                                    <input maxlength="16" required class="form-control" type="password" value="@Model.editPassword"
                                            placeholder="Contraseña" id="example-password-input" name="password"
                                            data-toggle="tooltip" />
                                     @* <small class="form-text text-muted">Contraseña utilizada para ingresar al sistema</small>*@
