--- a/WebApplication1/Areas/webmaster/Views/comunicaciones/editarblog.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunicaciones/editarblog.cshtml
@@ -59,7 +59,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input-1" class="col-sm-3 col-form-label">Título</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="@Model.editBlog.title" name="title"
+                                    <input maxlength="90" class="form-control" type="text" value="@Model.editBlog.title" name="title"
                                            data-toggle="tooltip" title="Título descriptivo del blog"
                                            placeholder="Título" id="example-email-input-1" required />
                                     <small class="form-text text-muted">Título descriptivo del blog</small>
@@ -69,7 +69,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input-2" class="col-sm-3 col-form-label">Autor</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="@Model.editBlog.author" name="author"
+                                    <input maxlength="30" class="form-control soloTexto" type="text" value="@Model.editBlog.author" name="author"
                                            data-toggle="tooltip" title="Autor descriptivo del blog" placeholder="Autor"
                                            id="example-email-input-2" required />
                                     <small class="form-text text-muted">Autor descriptivo del blog</small>
