--- a/WebApplication1/Areas/webmaster/Views/comunidades/editar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunidades/editar.cshtml
@@ -56,7 +56,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="@Model.editCommunity.first_name"
+                                    <input maxlength="40" class="form-control" type="text" value="@Model.editCommunity.first_name"
                                            data-toggle="tooltip"
                                            placeholder="Nombre" id="example-email-input" name="first_name" required>
                                     @* <small class="form-text text-muted">Nombre de la comunidad</small>*@
@@ -98,7 +98,7 @@
                                 <label class="col-sm-3 col-form-label">Paquete</label>
                                 <div class="col-sm-9">
                                     <select class="form-control" name="packageId"
-                                            data-toggle="tooltip">
+                                            data-toggle="tooltip" required>
                                         @foreach (var item in Model.packageList)
                                         {
                                             if (Model.editCommunity.package_id == item.id)
@@ -119,7 +119,7 @@
                             <div class="form-group row">
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Dirección</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" name="apartment" placeholder="Dirección"
+                                    <input maxlength="90" class="form-control" name="apartment" placeholder="Dirección"
                                            data-toggle="tooltip" value="@Model.editCommunity.apart"
                                            required />
                                     @*<small class="form-text text-muted">Dirección</small>*@
@@ -129,7 +129,7 @@
                             <div class="form-group row">
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Descripción</label>
                                 <div class="col-sm-9">
-                                    <textarea class="form-control" rows="3" placeholder="Descripción" name="description"
+                                    <textarea required class="form-control" rows="3" placeholder="Descripción" name="description"
                                               data-toggle="tooltip">@Model.editCommunity.description</textarea>
                                     @*<small class="form-text text-muted">Descripción de la comunidad</small>*@
                                 </div>
