--- a/WebApplication1/Areas/webmaster/Views/paquetes/editar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/paquetes/editar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "editar";
-    Page.Title = "Editar paquete - Brokolee Software";
+    Page.Title = "Editar paquete - Brokolee Software";    
 }
 
 <div class="page-content-wrapper">
@@ -55,10 +55,10 @@
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="@Model.editPackage.first_name"
+                                    <input maxlength="30" class="form-control soloTexo" type="text" value="@Model.editPackage.first_name"
                                            name="first_name" data-toggle="tooltip"
                                            placeholder="Paquete 1" id="example-email-input" required />
-                                   @* <small class="form-text text-muted">Nombre del Paquete</small>*@
+                                    @* <small class="form-text text-muted">Nombre del Paquete</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -68,12 +68,12 @@
                                     <div class="input-group mt-2">
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"><i class="fas fa-dollar-sign"></i></span>
-                                        </div>
-                                        <input type="text" placeholder="0.00" value="@Model.editPackage.payment" name="payment"
+                                        </div>                                         
+                                        <input type="number" step="any" maxlength="10" placeholder="0.00" value="@Model.editPackage.payment.ToString().Replace(',', '.')" name="payment"
                                                data-toggle="tooltip"
                                                class="form-control" required />
                                     </div>
-                                   @* <small class="form-text text-muted">Pago recibido por el paquete adquirido</small>*@
+                                    @* <small class="form-text text-muted">Pago recibido por el paquete adquirido</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -81,42 +81,42 @@
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Descripción</label>
                                 <div class="col-sm-9">
                                     <textarea class="form-control" rows="3" name="description"
-                                              data-toggle="tooltip" 
+                                              data-toggle="tooltip"
                                               placeholder="">@Model.editPackage.description</textarea>
-                                 @*   <small class="form-text text-muted">Descripción del paquete</small>*@
-                                </div>
-                            </div>
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-name1-input" class="col-sm-3 col-form-label">Comunidad</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="@Model.editPackage.community"
-                                           name="community" data-toggle="tooltip" 
-                                           placeholder="Comunidad 1" id="example-name1-input" required />
-                                  @*  <small class="form-text text-muted">Nombre de la comunidad</small>*@
-                                </div>
-                            </div>
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-name1-input" class="col-sm-3 col-form-label">Administrador</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="@Model.editPackage.admin_email" name="admin_email"
-                                           data-toggle="tooltip" 
-                                           placeholder="jdelpueblo@dominio.com" id="example-name1-input" required />
-                                   @* <small class="form-text text-muted">Email del administrador</small>*@
+                                    @*   <small class="form-text text-muted">Descripción del paquete</small>*@
                                 </div>
                             </div>
                             @*<div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-name1-input" class="col-sm-3 col-form-label">Suscribir enlace</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="text" name="suscribe_link" required
-                                           value="@Model.editPackage.suscribe_link"
-                                           placeholder="Suscribir enlace" id="example-name1-input"
-                                           data-toggle="tooltip" title="Enlace de Suscripción" />
-                                    <small class="form-text text-muted">Suscribir enlace</small>
-                                </div>
-                            </div>*@
+                                <div class="form-group row">
+                                    <label for="example-name1-input" class="col-sm-3 col-form-label">Comunidad</label>
+                                    <div class="col-sm-9">
+                                        <input class="form-control" type="text" value="@Model.editPackage.community"
+                                               name="community" data-toggle="tooltip"
+                                               placeholder="Comunidad 1" id="example-name1-input" required />
+                                      <small class="form-text text-muted">Nombre de la comunidad</small>
+                                    </div>
+                                </div>*@
+                            @*<div class="form-divider"></div>
+                                <div class="form-group row">
+                                    <label for="example-name1-input" class="col-sm-3 col-form-label">Administrador</label>
+                                    <div class="col-sm-9">
+                                        <input class="form-control" type="text" value="@Model.editPackage.admin_email" name="admin_email"
+                                               data-toggle="tooltip"
+                                               placeholder="jdelpueblo@dominio.com" id="example-name1-input" required />
+                                       <small class="form-text text-muted">Email del administrador</small>
+                                    </div>
+                                </div>*@
+                            @*<div class="form-divider"></div>
+                                <div class="form-group row">
+                                    <label for="example-name1-input" class="col-sm-3 col-form-label">Suscribir enlace</label>
+                                    <div class="col-sm-9">
+                                        <input class="form-control" type="text" name="suscribe_link" required
+                                               value="@Model.editPackage.suscribe_link"
+                                               placeholder="Suscribir enlace" id="example-name1-input"
+                                               data-toggle="tooltip" title="Enlace de Suscripción" />
+                                        <small class="form-text text-muted">Suscribir enlace</small>
+                                    </div>
+                                </div>*@
                             <div class="form-divider"></div>
                             <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
